<resources>
    <string name="app_name">GIST News</string>
    <string name="please_select_lang">Please select a language to continue</string>
    <string name="news_english">GIST News (English)</string>
    <string name="news_hindi">GIST समाचार (Hindi)</string>
    <string name="news_bengali">GIST খবর (Bengali)</string>
    <string name="news_marathi">GIST बातमी (Marathi)</string>
    <string name="news_punjabi">GIST ਖ਼ਬਰਾਂ (Punjabi)</string>
    <string name="news_gujrati">GIST સમાચાર (Gujarati)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="covid19">Covid19</string>
    <string name="mynews">Bookmark</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_lang">Select Language</string>
    <string name="app_info">App Information</string>
    <string name="contact_us">Contact Us</string>
    <string name="version">Version</string>
    <string name="newuser">New Registrartion ?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile">Enter Mobile No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="usertype">User Type</string>
    <string name="admin">Admin</string>
    <string name="editor">Editor</string>
    <string name="reader">Reader</string>
    <string name="registration">Registration</string>
    <string name="please_enter_user_name">Please Enter User Name</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="Login_Error">Login Error</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="not_connected_to_internet">It seems you are not connected to internet.</string>
    <string name="sorry_invalid_user_name_email">Sorry! Invalid user name or email</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="please_enter_uertype">Please enter user type</string>
    <string name="please_enter_mobile">Please enter mobile no</string>
    <string name="Select_UserType">Select UserType</string>
    <string name="please_enter_validmobileno">Please enter valid mobile no</string>
    <string name="Navigation_error">News Error</string>
    <string name="sorry_empty_category_list">Sorry! Empty Category List</string>
    <string name="sorry_empty_ist">Sorry ! Empty List</string>
    <string name="no_updated_news">No Updated News</string>
    <string name="politics">Politics</string>
    <string name="breaking">Breaking News</string>
    <string name="logout">Are you sure ?</string>
    <string name="add_tag">Add Tag</string>
    <string name="addtag_hint">Please enter the TAG name</string>
    <string name="submit">Submit</string>
    <string name="AddTag_error">ADD TAG Error</string>
    <string name="sorry_could_not_addtag">Sorry ! Could not Add Tag</string>
    <string name="logouttag">LogOut</string>
    <string name="Success">Success</string>
    <string name="search_Category">Search Category</string>
    <string name="please_select">Please Select Category</string>
    <string name="login_error_tag">Login Error</string>
    <string name="login_error">Please LogIn to access this</string>
    <string name="permission_error">"Unable to procees without required permission"</string>
    <string name="permission_denied_message">"Unable to run app without these permission\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="bookmarkheader">Bookmarked News</string>
    <string name="breakingnews">Breaking News</string>

    <string name="indianews">INDIA NEWS</string>
    <string name="worldnews">WORLD NEWS</string>
    <string name="businessnews">BUSINESS NEWS</string>
    <string name="covidnews">COVID19 NEWS</string>
    <string name="entertainmentnews">ENTERTAINMENT NEWS</string>
    <string name="healthnews">HEALTH NEWS</string>
    <string name="Lifestylenews">LIFESTYLE NEWS</string>
    <string name="Localnews">LOCAL NEWS</string>
    <string name="politicsnews">POLITICS NEWS</string>
    <string name="sportsnews">SPORTS NEWS</string>
    <string name="technologynews">TECHNOLOGY NEWS</string>
    <string name="EMPTYTAG">This field is required</string>
    <string name="news">NEWS</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="add_news">Add News</string>
    <string name="addnews_title">Add news title</string>
    <string name="addnews_description">Add news description</string>
    <string name="addnews_url">Add news link</string>
    <string name="loginadmin_error">Please LogIn as admin to access this</string>
    <string name="please_enter_usertype">Please select usertype</string>
    <string name="sorry_could_not_addnews">Sorry ! Could not Add News</string>
    <string name="addnews_category">Add news category</string>
    <string name="addnews_successful">News Successfully Added</string>
    <string name="addnews_shortdes">Please enter short description</string>
    <string name="schedule_news">Schedule News</string>
    <string name="cust_app">Customize App</string>
    <string name="please_select_app_icon_app_name">Please Select AppIcon and AppName </string>
    <string name="news_name1">GISTNEWS</string>
    <string name="news_name2">AAdyaNews</string>
    <string name="news_name3">TechnoNews</string>
    <string name="cust_color_app">Change Color Of App</string>
    <string name="please_select_color_theme_app">Please select color theme of App</string>
    <string name="addtag_successfully">Tag added successfully.</string>
    <string name="DownloadedContent">DownloadedContent</string>
    <string name="newsaudio">News Audio</string>
    <string name="temperature">Temperature</string>


</resources>