<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/appcolor"
        android:text="@string/please_select_lang"
        android:textSize="@dimen/_14sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />

    <LinearLayout
        android:id="@+id/ll_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_title"
        android:paddingLeft="5dp">
        <ImageView
            android:id="@+id/img_eng"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appcolor"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_english"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundredcolorbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_english"
        android:paddingLeft="5dp"

        >
        <ImageView
            android:id="@+id/img_hindi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_hindi"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bengali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_hindi"
        android:paddingLeft="5dp"
        >
        <ImageView
            android:id="@+id/img_bengali"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_bengali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appcolor"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_bengali"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_marathi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_bengali"
        android:paddingLeft="5dp"
        >
        <ImageView
            android:id="@+id/img_marathi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_marathi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appcolor"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_marathi"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_punjabi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_marathi"
        android:paddingLeft="5dp"
        >
        <ImageView
            android:id="@+id/img_punjabi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_punjabi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appcolor"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_punjabi"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gujarati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_punjabi"
        android:paddingLeft="5dp"
        >
        <ImageView
            android:id="@+id/img_gujarati"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/applogo"/>
        <TextView
            android:id="@+id/tv_gujarti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appcolor"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/news_gujrati"/>
    </LinearLayout>

</RelativeLayout>
</layout>