<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <include
            android:id="@+id/app_content_layout"
            layout="@layout/app_content"/>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:background="@color/appcolor"
            app:elevation="5dp">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/menu_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_header"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_sel_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/appcolor"
                    android:text="@string/select_lang"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/menu_divider"
                    android:background="@drawable/tv_backgroundbg"
                    app:drawableRightCompat="@drawable/right_icon_drawable" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nav_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sel_lang"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/tv_customize_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/appcolor"
                    android:text="@string/cust_app"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:layout_below="@+id/nav_recycler_view"
                    android:background="@drawable/tv_backgroundbg"
                    app:drawableRightCompat="@drawable/right_icon_drawable" />

                <TextView
                    android:id="@+id/tv_change_color_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/appcolor"
                    android:text="@string/cust_color_app"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tv_customize_app"
                    android:background="@drawable/tv_backgroundbg"
                    app:drawableRightCompat="@drawable/right_icon_drawable" />

                <TextView
                    android:id="@+id/tv_app_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/appcolor"
                    android:text="@string/app_info"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tv_change_color_app"
                    android:background="@drawable/tv_backgroundbg"
                    app:drawableRightCompat="@drawable/right_icon_drawable" />

                <LinearLayout
                    android:id="@+id/app_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/tv_app_info"
                    android:background="@drawable/tv_backgroundbg"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/tv_contactus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/appcolor"
                        android:fontFamily="sans-serif"
                        android:text="@string/contact_us"
                        android:padding="5dp"
                       />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/appcolor"
                        android:fontFamily="sans-serif"
                        android:text="@string/version"
                        android:padding="5dp"
                         />
                </LinearLayout>
            </RelativeLayout>
            </ScrollView>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>